--- a/src/components/SeleccionDeNivel.css
+++ b/src/components/SeleccionDeNivel.css
@@ -8,6 +8,11 @@
   align-items: center;
 }
 
+.tituloSeleccionDeNivel {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 .cardNivel {
   text-align: center;
 }
