--- a/src/components/SeleccionDeNivel.css
+++ b/src/components/SeleccionDeNivel.css
@@ -1,3 +1,14 @@
+.contenedorSeleccionDeNivel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100dvh;
+  gap: 20px;
+  background: linear-gradient(180deg, #00aaff 0%, #00071f  100%);
+  padding: 20px;
+
+}
+
 .contenedorNiveles {
   display: grid;
   width: 70%;
@@ -6,6 +17,7 @@
   gap: 20px;
   justify-content: center;
   align-items: center;
+  
 }
 
 .tituloSeleccionDeNivel {
